--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
             <h2>Coding Quiz Challenge</h2>
             <p>
-                Press the start button to start the quiz.
+                Try to answer the following quiz questions within the time-limit.  Keep in mind that incorrect answers will penalize your score/time by ten seconds.
             </p>
             <button id="startBtn" type="button">Start Quiz</button>
         </main>
@@ -29,16 +29,16 @@
             <p>View high score</p> <!-- will need this to link to the high score page.  nav element? -->
             <p>Time: 0</p> <!-- populate this with a funtion in js -->
         </header>
-        <main>
+        <main id="quizMain">
             <h2 id="question">
-                <!-- The question will be displayed here -->
+                Sample question for formatting purposes.<!-- The question will be displayed here -->
             </h2>
-            <ul>
-                <li class="answer" id="answer-a"></li> <!-- The four answers to the question-->
-                <li class="answer" id="answer-b"></li> <!-- these will have to be populated from the js-->
-                <li class="answer" id="answer-c"></li> <!-- should these be buttons intead of li items and then use flex to align them-->
-                <li class="answer" id="answer-d"></li>
-            </ul>
+            <div id="answerButtons">
+                <button class="answerBtn" id="a">sample a</button><br>
+                <button class="answerBtn" id="b">sample b</button><br>
+                <button class="answerBtn" id="c">sample c</button><br>
+                <button class="answerBtn" id="d">sample d</button><br>
+            </div>
             <p id="right-wrong">
                 <!-- right or wrong will need to display on the next question after button is clicked-->
                 <!-- not sure how to do this, guessing this <p> element would be added in js file after the button is clicked-->
@@ -52,7 +52,7 @@
             <p>View high score</p> <!-- will need this to link to the high score page.  nav element? -->
             <p>Time: 0</p><!-- This should be left off the page when the quiz is over--> 
         </header>
-        <main>
+        <main id="completeMain">
             <h2>All done!</h2>
             <p>
                 Your final score is (populate score here)<!-- somehow need to populate score -->
@@ -67,7 +67,7 @@
 
     <!-- High Score Section-->
     <section id="high-scores"> 
-        <main>
+        <main id="scoreMain">
             <h2>High Scores</h2>
             <ul class="high-list">
                 <li class="high-list-item" id="high-list-item">
