started quiz, timer, loaded first question

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 Sample question for formatting purposes.<!-- The question will be displayed here -->
             </h2>
             <div id="answerButtons">
-                <button class="answerBtn" id="answerA">sample a</button><br>
-                <button class="answerBtn" id="answerB">sample b</button><br>
-                <button class="answerBtn" id="answerC">sample c</button><br>
-                <button class="answerBtn" id="answerD">sample d</button><br>
+                <button class="answerBtn" id="answerA" onclick="gradeAnswer('answerA')">sample a</button><br>
+                <button class="answerBtn" id="answerB" onclick="gradeAnswer('answerB')">sample b</button><br>
+                <button class="answerBtn" id="answerC" onclick="gradeAnswer('answerC')">sample c</button><br>
+                <button class="answerBtn" id="answerD" onclick="gradeAnswer('answerD')">sample d</button><br>
             </div>
             <p id="right-wrong">
                 <!-- right or wrong will need to display on the next question after button is clicked-->
