--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@
                 Sample question for formatting purposes.<!-- The question will be displayed here -->
             </h2>
             <div id="answerButtons">
-                <button class="answerBtn" id="answerA" onclick="gradeAnswer('answerA')">sample a</button><br>
-                <button class="answerBtn" id="answerB" onclick="gradeAnswer('answerB')">sample b</button><br>
-                <button class="answerBtn" id="answerC" onclick="gradeAnswer('answerC')">sample c</button><br>
-                <button class="answerBtn" id="answerD" onclick="gradeAnswer('answerD')">sample d</button><br>
+                <button class="answerBtn" id="answerA" onclick="gradeAnswer('pickA')">sample a</button><br>
+                <button class="answerBtn" id="answerB" onclick="gradeAnswer('pickB')">sample b</button><br>
+                <button class="answerBtn" id="answerC" onclick="gradeAnswer('pickC')">sample c</button><br>
+                <button class="answerBtn" id="answerD" onclick="gradeAnswer('pickD')">sample d</button><br>
             </div>
-            <p id="right-wrong">
-                <!-- right or wrong will need to display on the next question after button is clicked-->
-                <!-- not sure how to do this, guessing this <p> element would be added in js file after the button is clicked-->
+            <p id="rightWrong">
+                
             </p>
         </main>
     </section>
@@ -49,7 +48,6 @@
     <section id="completePage"> 
         <header>
             <div>View high score</div> <!-- will need this to link to the high score page.  nav element? -->
-            <div id="timer">Time: 0</div><!-- This should be left off the page when the quiz is over--> 
         </header>
         <main id="completeMain">
             <h2>All done!</h2>
