--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <form class="entered">
                 <label for="initials">Enter Initials: </label>
                 <input type="text" id="initials" name="initials">
-                <input type="submit" id="initialBtn" value="Submit"><!-- should add the initials and to an array in js file-->
+                <button id="initialBtn">Submit</button><!-- should add the initials and to an array in js file-->
             </form>
         </main>
     </section>
