high score page fixed

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </p>
             <form class="entered">
                 <label for="initials">Enter Initials: </label>
-                <input type="text" id="initials" name="initials">
+                <input type="text" id="initials" name="initials" value="">
                 <button id="initialBtn">Submit</button><!-- should add the initials and to an array in js file-->
             </form>
         </main>
@@ -68,8 +68,8 @@
             <h2>High Scores</h2>
             <ol type="1" id="highList">
                 <li class="highListItem" id="highListItem">
-                    <div id="highInitials"></div>
-                    <div id="highScore"></div>
+                    <div id="highInitials">test1</div>
+                    <div id="highScore">test2</div>
                 </li>
             </ol>
             <button type="button" id="homepageBtn">Homepage</button>
